[project]
name = "cadastro-cliente"
version = "0.1.0"
description = ""
authors = [
    {name = "Marqueane Souza",email = "seu-email@exemplo.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.52.1,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
